testing vh to fix scroll issue on iPhone

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -577,7 +577,7 @@ main {
 
 .projectListOutline {
   overflow-y: scroll;
-  height: 100%;
+  height: 70vh;
 }
 
 .projectListOutline::-webkit-scrollbar {
